# projet-api-VF

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  STOCKAGE_SETUP.md  STREAMLIT_CLOUD_DEPLOY.md  Slides_api.tex  econometrics.py  fly.toml  pyproject.toml  rapport.tex  render.yaml  requirements.txt  run.bat  run.sh  slide_api.tex  streamlit_app.py  test_storage.py
.streamlit/: config.toml
app/: __init__.py  main.py  nlp.py  prices.py  storage.py  utils.py
app/scrapers/: __init__.py  bitcointalk_scraper.py  bluesky_scraper.py  chan4_scraper.py  code_jose.py  discord_scraper.py  github_scraper.py  http_scraper.py  instagram_scraper.py  reddit_scraper.py  selenium_scraper.py  stocktwits_scraper.py  telegram_scraper.py  tiktok_scraper.py  twitter_scraper.py  youtube_scraper.py
data/: .gitignore  README.md
data/exports/: .gitkeep
templates/: compare.html  index.html
