[tool.poetry]
name = "crypto-sentiment"
version = "1.0.0"
description = "Analyse de sentiment crypto - MoSEF 2024-2025"
authors = ["MoSEF Students"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.0"
requests = "^2.31.0"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
transformers = "^4.37.0"
torch = "^2.1.0"
pandas = "^2.2.0"
streamlit = "^1.30.0"
plotly = "^5.18.0"
pandas-stubs = "~=2.3.3"
statsmodels = "^0.14.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"